update voice transcriber

--- a/DocBotApp/backend/.env.example
+++ b/DocBotApp/backend/.env.example
@@ -9,3 +9,5 @@ SMTP_USER=
 SMTP_PASS=
 SMTP_FROM=
 SMTP_USE_TLS=true
+# OpenAI API key for Whisper transcription (optional - local STT is preferred)
+OPENAI_API_KEY=sk-...
